# codex-sound-manager

./: .gitattributes  .gitignore  AGENTS.md  Build-Release.cmd  Cargo.toml  LICENSE  README.md  README_EN.md  Run-Portable.vbs  Start-Dev.cmd  THIRD_PARTY_NOTICES.md  floating.html  index.html  package-lock.json  package.json  tailwind.config.cjs  tauri.conf.json  tsconfig.json  vite.config.ts
capabilities/: default.json
frontend/: app.tsx  floating.css  floating.tsx  main.tsx  styles.css
frontend/components/ui/: button.tsx  dialog.tsx  switch.tsx  tooltip.tsx
icons/: .source-sha256  icon.icns
scripts/: Build-Release.ps1  Generate-Icons.ps1  generate_default_sound.py
sounds/: README.md
src/: main.rs
