[package]
name = "codex-sound-manager"
version = "1.3.3"
edition = "2024"
description = "Global task completion sound manager for Codex on Windows"
license = "MIT"
repository = "https://github.com/miao8818/codex-sound-manager"
homepage = "https://github.com/miao8818/codex-sound-manager"
readme = "README.md"
keywords = ["codex", "notification", "sound", "tauri", "windows"]
categories = ["gui"]
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
rfd = { version = "0.15", default-features = false }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
toml_edit = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
